--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -49,17 +49,18 @@
 
 @mixin heading-1 {
   @font-face {
-    font-family: "Roboto-Black";
-    src: url("../path/to/Roboto-Black.ttf") format("truetype"); /* here also */
-    font-weight: 900;
+    font-family: "Open Sans ExtraBold";
+    src: url("../assets/fonts/OpenSans/OpenSans-ExtraBold.ttf")
+      format("truetype");
+    font-weight: 800;
     font-style: normal;
   }
 }
 
 @mixin heading-2 {
   @font-face {
-    font-family: "Roboto-Medium";
-    src: url("../path/to/Roboto-Medium.ttf") format("truetype");
+    font-family: "Open Sans Bold";
+    src: url("../assets/fonts/OpenSans/OpenSans-Bold.ttf") format("truetype");
     font-weight: 700;
     font-style: normal;
   }
