--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,11 +5,12 @@
 /* ++++++++++ Start of Navbar Component style sheet ++++++++++ */
 .navbar-container {
   position: sticky;
-  background:rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.1);
   width: 100%;
   z-index: 100;
   top: 0;
-  .navbar {  width: 100%;
+  .navbar {
+    width: 100%;
 
     height: 6rem;
     display: flex;
@@ -22,7 +23,7 @@
     .logo {
       padding: 0 2rem;
 
-     /*  h1 {
+      /*  h1 {
         @include logo-font-style;
         font-family: "MoonDance-Regular";
         font-size: 4rem;
@@ -129,69 +130,72 @@
 
 /* ++++++++++ Start of Hero Component style sheet ++++++++++ */
 .hero-container {
-height: 100vh;
-width: 100vw;
- background-image:linear-gradient(rgba(58, 63, 58, 0.671),rgba(43, 49, 43, 0.762)), url('../assets/images/Hero/mainpg.jpg');
-
- 
- background-size: cover;
- background-position: 60% 50%;
-opacity: 90%;
- display: flex;
-justify-content: center;
-
-
-
-
-}.content{
-  width: 80%;
-  display: flex;
-  padding-top: 3rem;
-text-align: center;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  
-  gap:2rem;
-  h1{
-    font-size: 70px;
-    background: #F3F0E5;
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; 
-  padding-top:2rem ; }
- p{
-  color:#F3F0E5;
-  font-size:2rem;
-
- }
- h2{
-  color:#F3F0E5;
-  font-size:3rem;
- }
-
- button{
-  width: 5rem;
-  height: 5rem;
-  border-radius: 50%;
-  background: #b68a23;
   position: relative;
-top: 10%;
-  border: none
- }
- .icon{
-  color: #ffffff;
-  font-size:2rem;
-display: flex;
-justify-content: center;
-align-items: center; }
-}
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
 
- 
+  // Create a pseudo-element for the background image
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("../assets/images/Hero/mainpg.jpg");
+    background-size: cover;
+    background-position: 70% 70%;
+    filter: blur(10px) brightness(0.6); // Apply the blur effect to the background
+    z-index: -1;
+  }
 
-.bg{
-  
-  
+  .content {
+    width: 80%;
+    display: flex;
+    padding-top: 3rem;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    gap: 2rem;
+    h1 {
+      font-size: 70px;
+      background: #f3f0e5;
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      padding-top: 2rem;
+    }
+    p {
+      color: #f3f0e5;
+      font-size: 2rem;
+    }
+    h2 {
+      color: #f3f0e5;
+      font-size: 3rem;
+    }
+
+    button {
+      width: 5rem;
+      height: 5rem;
+      border-radius: 50%;
+      background: #b68a23;
+      position: relative;
+      top: 10%;
+      border: none;
+    }
+    .icon {
+      color: #ffffff;
+      font-size: 2rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
 }
 
 /* ++++++++++ End of Hero Component style sheet ++++++++++ */
@@ -199,7 +203,7 @@ align-items: center; }
 /* ++++++++++ Start of Aboutme Component style sheet ++++++++++ */
 .about-container {
   @include section-padding-style;
-  
+
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -213,10 +217,9 @@ align-items: center; }
 
   .rectangle1,
   .rectangle2 {
-
     position: absolute;
-   top: 0;
-    left: 10rem; 
+    top: 0;
+    left: 10rem;
     width: 450px;
     height: 630px;
     transform: rotate(-13deg);
@@ -490,13 +493,13 @@ align-items: center; }
 
 .demo {
   @include section-padding-style;
-  
+
   h2 {
     @include heading-2-style;
     margin-bottom: 2rem; // Assuming you want the margin at the top level as well.
     text-align: center;
     padding: 3rem;
-  }  
+  }
 }
 
 .demo-container {
@@ -516,7 +519,6 @@ align-items: center; }
   .mb-2 {
     margin-bottom: $margin-size;
   }
-
 
   .demo-session-description {
     padding: 2rem;
