--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -143,7 +143,6 @@
     }
   }
 }
-
 /* ++++++++++ End of Hero Component style sheet ++++++++++ */
 
 /* ++++++++++ Start of Aboutme Component style sheet ++++++++++ */
@@ -209,11 +208,15 @@
 /* ++++++++++ Start of Service Component style sheet ++++++++++ */
 .service-container {
   @include section-padding-style;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   /* Heading style of the section */
   .header-container {
     text-align: center;
     h2 {
+      padding-bottom: 1.5rem;
       @include heading-2-style;
       @include heading-2;
     }
@@ -224,41 +227,28 @@
 
   /* Tab container style */
   .tab-container {
+    width: 80%;
+    padding: 8rem;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    /* Tab buttons style */
     .navigation {
-      position: relative;
       display: flex;
       justify-content: center;
       align-items: center;
+      gap: 25rem;
+      margin-bottom: 0;
+      padding-left: 0;
 
-      /* Tab active button style */
-      .active {
-        background: #b48821;
-        .button {
-          .icon {
-            transition-delay: 0s;
-          }
-          .icon::before {
-            transform: scale(1);
-          }
-        }
-      }
-
-      /* Tab un-active buttons style */
       li {
         position: relative;
         list-style: none;
-        margin: 3.5rem 5rem;
         display: flex;
         justify-content: center;
-        padding: 4.9rem;
+        align-items: center;
         border-radius: 50%;
-        /*       box-shadow: 10px 22px 40px #0000 5%; */
-        box-shadow: 20px 20px 60px #d6d6d6, -20px -20px 60px #ffffff;
+        box-shadow: 10px 22px 40px #0000 5%;
 
         .button {
           display: flex;
@@ -268,7 +258,6 @@
 
           .icon {
             position: absolute;
-            font-size: 5rem;
             width: 10rem;
             height: 10rem;
             display: flex;
@@ -284,6 +273,27 @@
               width: 6rem;
             }
           }
+
+          &::before {
+            content: "";
+            position: absolute;
+            inset: 0;
+            box-shadow: 10px 22px 40px #0000 5%;
+            border-radius: 50%;
+            transform: scale(0);
+            transition: 0.5s;
+          }
+        }
+
+        &.active {
+          .icon {
+            transition-delay: 0s;
+            font-size: 12rem;
+            background: #b48821; /* Set background color for active state */
+            &::before {
+              transform: scale(1);
+            }
+          }
         }
       }
     }
@@ -293,17 +303,18 @@
   .service-section {
     display: flex;
     justify-content: center;
+
     .card-container {
       background-image: url("../assets/images/services/wave.svg");
       background-size: cover;
       outline: none;
       border: none;
-
       box-shadow: 20px 20px 60px #ece8e7, -20px -20px 60px #ffffff;
-      width: 100%;
+      width: 70%;
+
       .img-fluid {
-        height: 30rem;
-        width: 45rem;
+        height: 25rem;
+        width: 40rem;
       }
 
       .subscribe-btn {
@@ -311,7 +322,7 @@
       }
 
       .card-text {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
         padding: 0.6rem;
         color: $text-color;
         @include paragraph-normal;
