new changes has been made

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,3 +10,9 @@ $phone-screen: 599px;
 $tablet-screen-min: 600px;
 $tablet-screen-max: 1023px;
 $desktop: 1024px;
+
+/* Media Query breakPoints for Service component */
+$small: 360px;
+$medium: 600px;
+$large: 801px;
+$xlarge: 1024px;
